# anima

./: Cargo.toml
src/: Makefile  box_renderer.rs  builders.rs  framework.rs  fxaa.frag  fxaa.frag.spv  fxaa.rs  fxaa.vert  fxaa.vert.spv  main.rs  shader.frag  shader.vert.spv
