[package]
name = "anima"
version = "0.1.0"
authors = ["Victor \"multun\" Collod <victor.collod@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs/", rev = "8ac6145ce6b987a29df4d4f2f75fd6262ca67651" }
env_logger = "0.7"
winit = { version = "0.22.1", features = ["web-sys"] }
futures = "0.3"
log = "0.4"
bytemuck = "1.3"
cgmath = "0.17"
